<resources>
    <string name="app_name">LoginDemo</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="btn_link_to_register">Sign up</string>
    <string name="btn_link_to_login">Log in</string>
    <string name="btn_sign_out">Log out</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="bio">A short bio</string>
    <string name="btn_delete_pic">Delete</string>
    <string name="btn_comment">Post</string>
    <string name="comment">Comment...</string>
    <string name="btn_post">Post</string>
    <string name="btn_cancel">Cancel</string>
    <string name="photo_caption">Caption</string>
</resources>
